--- a/src/content/docs/guides/submit_slurm_job.mdx
+++ b/src/content/docs/guides/submit_slurm_job.mdx
@@ -13,7 +13,7 @@ To use `submit_slurm_job` you need a few things set before hand
 <Steps>
 1. A [template file](/slurmtools-docs/guides/simple_template_file) ready to be populated
 2. All files needed to run NONMEM - control stream and data
-3. [`bbr`](https://github.com/metrumresearchgroup/bbr)<Icon name='external'/> installed in your R environment
+3. [`bbr`](https://github.com/metrumresearchgroup/bbr)<span style={{ display: 'inline-block', verticalAlign: 'middle' }}><Icon name="external" /></span> installed in your R environment
 4. A way of running NONMEM such as bbi or nmm
 </Steps>
 <Aside type="note">Depending on the complexity of your template file you might need additional information as well!</Aside> 
