--- a/src/content/docs/blogs/simple_notifications.mdx
+++ b/src/content/docs/blogs/simple_notifications.mdx
@@ -39,6 +39,6 @@ import submit from '/src/code/ntfy-submit.R?raw';
 <Code title='ntfy-submit.R' lang='r' code={submit}/>
 
 ## Job status alerts
-This sends off two messages to [ntfy.sh](https://ntfy.sh):
+This sends off two messages to [ntfy.sh](https://ntfy.sh)<span style={{ display: 'inline-block', verticalAlign: 'middle' }}><Icon name="external" /></span>:
 
 ![](/slurmtools-docs/ntfy_sh.png)
