--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/slurmtools.png
   actions:
     - text: Slurmtools User Guide
-      link: guides/0_intro/
+      link: guides/intro/
       icon: right-arrow
     - text: Explore the slurmtools repository
       link: https://github.com/a2-ai/slurmtools/
